<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="12dp"
    android:elevation="12dp"
    app:cardCornerRadius="18dp">

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp">

        <ImageView
            android:id="@+id/image_person"
            android:layout_width="70dp"
            android:layout_height="70dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginBottom="8dp"
            android:contentDescription="@string/person_image"
            android:src="@drawable/ic_perm_identity" />

        <TextView
            android:id="@+id/tv_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="6dp"
            android:layout_marginTop="6dp"
            android:layout_marginEnd="6dp"
            android:layout_marginBottom="6dp"
            android:layout_toEndOf="@+id/image_person"
            android:text="@string/mostafa_elM"
            android:textColor="@color/black"
            android:textSize="22sp"
            android:textStyle="bold"
            tools:ignore="RelativeOverlap" />

        <TextView
            android:id="@+id/tv_dayTime"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/tv_name"
            android:layout_marginStart="6dp"
            android:layout_toEndOf="@+id/image_person"
            android:drawablePadding="2dp"
            android:text="@string/wednesday_18_40_pm"
            android:textSize="16sp"
            app:drawableStartCompat="@drawable/ic_baseline_access_time_24" />

        <ImageView
            android:id="@+id/image_save"
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:layout_alignParentEnd="true"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginBottom="8dp"
            android:contentDescription="@string/save_image"
            android:src="@drawable/shape_1" />

        <View
            android:id="@+id/view_line"
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:layout_below="@+id/image_person"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"

            android:layout_marginEnd="8dp"
            android:layout_marginBottom="8dp"
            android:background="@color/gray" />

        <TextView
            android:id="@+id/tv_post_body"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/view_line"
            android:layout_marginStart="8dp"
            android:layout_marginTop="6dp"
            android:layout_marginEnd="8dp"
            android:layout_marginBottom="6dp"
            android:text="@string/post_body"
            android:textSize="12sp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/tv_post_body"
            android:layout_marginStart="8dp"
            android:layout_marginTop="6dp"
            android:layout_marginEnd="8dp"
            android:layout_marginBottom="6dp"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/image_like"
                android:layout_width="25dp"
                android:layout_height="25dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="8dp"
                android:layout_marginBottom="8dp"
                android:layout_weight="2"
                android:contentDescription="@string/save_image"
                android:src="@drawable/icon" />

            <ImageView
                android:id="@+id/image_comment"
                android:layout_width="25dp"
                android:layout_height="25dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="8dp"
                android:layout_marginBottom="8dp"
                android:layout_weight="2"
                android:contentDescription="@string/save_image"
                android:src="@drawable/icon_1" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:orientation="horizontal"
                tools:ignore="UseCompoundDrawables">

                <ImageView
                    android:id="@+id/image_share"
                    android:layout_width="25dp"
                    android:layout_height="25dp"
                    android:layout_marginStart="8dp"
                    android:layout_marginTop="8dp"
                    android:layout_marginEnd="8dp"
                    android:layout_marginBottom="8dp"
                    android:contentDescription="@string/save_image"
                    android:src="@drawable/shape" />

                <TextView
                    android:id="@+id/tv_share"
                    android:layout_width="wrap_content"
                    android:layout_height="25dp"
                    android:layout_marginStart="8dp"
                    android:layout_marginTop="8dp"
                    android:layout_marginEnd="8dp"
                    android:layout_marginBottom="8dp"
                    android:contentDescription="@string/save_image"
                    android:text="@string/share" />
            </LinearLayout>

        </LinearLayout>
    </RelativeLayout>
</androidx.cardview.widget.CardView>